Errors on mobile responsiveness fixed, page title changed to Akash GPU testnet

--- a/assets/scss/layouts/_pages.scss
+++ b/assets/scss/layouts/_pages.scss
@@ -75,12 +75,9 @@ h4:hover a {
     border: none !important;
   }
 
-
-
   .gpu_sub_text {
     text-align: center;
   }
-
 
   .text-wraps .ordered_details li {
     width: 500px;
@@ -92,9 +89,9 @@ h4:hover a {
   }
 
   .text-wraps .Gpu_header {
-    font-size: 36px !important;
+    font-size: 34px !important;
     font-weight: 900;
-    line-height: 50px;
+    line-height: 40px;
     letter-spacing: -0.02em;
     text-align: center;
     width: 470px;
@@ -106,23 +103,21 @@ h4:hover a {
     font-size: 34px;
   }
 
-  .wrapper_form {
-    margin-top: 90px;
-    height: 360px;
-    width: 800px;
-    top: 923px;
-    border-radius: 6px;
-    padding: 64px 0px 64px 0px;
-    border: 1px solid #e6e6e6 !important;
-  }
-
   .form_desc1 {
-    font-size: 44px;
-    height: 80px;
+    font-size: 30px;
     width: 410px;
     font-weight: 900;
     line-height: 48px;
     text-align: center;
+  }
+ section:nth-child(1) > div > div > div > div{
+    margin-top: 59px !important;
+  }
+
+
+  hr {
+    height: 0px;
+    width: 500px;
   }
 
   .date_text {
@@ -148,7 +143,7 @@ h4:hover a {
   .gpu_description {
     font-size: 19px;
     line-height: 29px;
-    width: 500px;
+    width: 440px;
   }
 
   .ordered_details2 > li:nth-child(2) {
@@ -175,7 +170,6 @@ h4:hover a {
   }
 
   .btn_wraps .s_d-btns {
-
     background-color: rgba(0, 0, 0, 0.07);
     text-align: center;
     font-size: 14px;
@@ -206,16 +200,15 @@ h4:hover a {
     color: #000000b2;
   }
 
- section:nth-child(3) > div > div > div > button:nth-child(2) {
+  section:nth-child(3) > div > div > div > button:nth-child(2) {
     border-radius: 8px;
     padding: 14px 17px 14px 17px;
   }
 
-
-section:nth-child(3) > div > div > div > button:nth-child(1){
-  border-radius: 8px;
-  padding: 14px 17px 14px 17px;
-}
+  section:nth-child(3) > div > div > div > button:nth-child(1) {
+    border-radius: 8px;
+    padding: 14px 17px 14px 17px;
+  }
 
   .btn_wraps .s_d-btns:hover {
     opacity: 0.5;
@@ -243,12 +236,47 @@ section:nth-child(3) > div > div > div > button:nth-child(1){
     color: #040404;
     font-weight: 500 !important;
     font-size: 24px;
+    padding-bottom: 60px;
   }
+
+  .btn_wraps{
+    margin-bottom: 64px;
+    margin-top: 40px;
+  }
+  .no-border {
+    margin-left: 40px;
+  }
+
+  .table_hr{
+    width: 400px;
+    margin: 30px auto;
+  }
+
+  .table_caption{
+    width: 400px;
+    margin: 30px auto;
+  }
+
 
   .gpu_text_2 {
     text-align: center;
   }
+  .join_header_text {
+    font-size: 30px;
+    font-weight: 900;
+    line-height: 50px;
+    letter-spacing: -0.02em;
+    text-align: center;
+  }
 
+  .join_header_desc {
+    font-size: 18px;
+    width: 100%;
+    margin-top: 27px;
+  }
+  .join_btn2 {
+    margin-top: 40px;
+  }
 }
 @include media-breakpoint-up(lg) {
   .wrapper_form {
@@ -273,11 +301,13 @@ section:nth-child(3) > div > div > div > button:nth-child(1){
     left: 0px;
   }
 
+  .no-border {
+    margin-left: 40px;
+  }
 
-  hr{
+  hr {
     height: 0px;
-width: 800px;
-
+    width: 800px;
   }
   .text-wraps .Gpu_header {
     font-size: 36px !important;
@@ -326,10 +356,9 @@ width: 800px;
     margin-top: 40px;
   }
 
-  .join_btn2{
+  .join_btn2 {
     margin-top: 32px;
   }
-
 
   .btn_wraps {
     justify-content: center;
@@ -337,7 +366,6 @@ width: 800px;
     padding-bottom: 100px;
     margin: 10px auto;
   }
-
 
   .gpu_sub_text {
     text-align: left;
@@ -439,12 +467,12 @@ width: 800px;
     height: 56px;
     width: 777px;
   }
-  .table_hr{
-width: 730px;
-left: 40px;
-margin: 40px auto;
+  .table_hr {
+    width: 730px;
+    left: 40px;
+    margin: 40px auto;
   }
-  .table_caption{
+  .table_caption {
     margin: 40px auto;
     width: 730px;
   }
@@ -488,7 +516,7 @@ margin: 40px auto;
   .table_description {
     width: 770px;
     font-size: 16px;
-}
+  }
 }
 
 @media (max-width: 576px) {
@@ -499,6 +527,10 @@ margin: 40px auto;
 
   .no-border {
     border-collapse: collapse;
+  }
+
+  .rewards__desc {
+    width: 330px;
   }
 
   .no-border th,
@@ -547,14 +579,23 @@ margin: 40px auto;
     margin: 10px auto;
     text-align: center;
   }
+  body {
+    overflow-x: hidden !important;
+  }
 
+  .illustration_wrap p {
+    height: 56px;
+    width: 230px;
+    text-align: center;
+    margin: 10px auto;
+  }
 
   .form_desc1 {
-    font-size: 31px;
+    font-size: 24px;
     font-weight: 900;
     line-height: 40px;
     text-align: center;
-    width: 300px;
+    width: 330px;
   }
 
   .date_text {
@@ -665,19 +706,20 @@ margin: 40px auto;
     margin-top: 40px;
   }
   .btn_wraps .s_d-btns {
-    height: 49px;
-    width: 110px !important;
+    height: 52px;
+    width: 157px !important;
     border-radius: 8px;
     padding: 12px 14px 12px 14px;
     background-color: rgba(0, 0, 0, 0.07);
     text-align: center;
     font-size: 9px;
-    margin-right: 30px;
+    margin-right: 20px;
     border: none;
     outline: none;
+    margin-top: 40px;
   }
 
-  .btn_wraps{
+  .btn_wraps {
     padding-bottom: 60px;
     justify-content: center;
     align-items: center;
@@ -686,7 +728,7 @@ margin: 40px auto;
   }
 
   .join_btnn {
-    margin-top: 34px;
+    padding-top: 52px;
   }
 
   .gpu_text_2 {
@@ -699,19 +741,36 @@ margin: 40px auto;
     text-align: left;
   }
   .join_header_text {
-    font-size: 31px;
+    font-size: 24px;
     font-weight: 900;
     line-height: 40px;
     letter-spacing: -0.02em;
     text-align: center;
-    margin-top: -40px;
+    margin-top: 20px;
   }
   .join_header_desc {
     font-size: 18px;
+    width: 100%;
+    margin-top: 27px;
   }
 
   .join_btn2 {
-    margin-top: -40px;
+    margin-top: 40px;
+  }
+
+  .no-border {
+    margin-left: 15px !important;
+  }
+
+  .table_hr {
+    width: 300px;
+    margin: 20px auto;
+  }
+
+  .table_caption {
+    width: 300px;
+    margin: 20px auto;
+    font-size: 16px;
   }
 }
 .edit-page svg,
@@ -744,10 +803,18 @@ p.meta {
   .join_btnn {
     margin-top: 58px;
   }
+
+  .no-border {
+    margin-left: 15px;
+  }
 }
 
 @media (max-width: 370px) {
   .join_btnn {
     margin-top: 78px;
+  }
+
+  .no-border {
+    margin-left: 0;
   }
 }
